--- a/json_config.json
+++ b/json_config.json
@@ -1,3 +1,3 @@
-{"ssd_folder":"/home/gidi/cloned_libs/ssd_keras//",
- "data_folder":"/home/gidi/data/extra",
-"ssd_base_weights":"/home/gidi/models/VGG_coco_SSD_300x300_iter_400000.h5"}
+{"ssd_folder":"C:/Users/Moise/Documents/Github/ssd_keras/",
+ "data_folder":"C:/Users/Moise/Documents/Github/Proyecto_ocr_deep_learning/data/extra/",
+"ssd_base_weights":"C:/Users/Moise/Documents/Github/Proyecto_ocr_deep_learning/models/VGG_coco_SSD_300x300_iter_400000.h5"}
